--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Good morning!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Dog Personality</title>
+</head>
+<body>
+	<br>
+	<center><img src="h1.70.jpg"></center>
+	<center><img src="boswer6.jpg"></center><br>
+	<a href="q1.html"><center><img src="starter.paw5.jpg"></center></a>
+</body>
+</html>
