--- a/dog/q1.html
+++ b/dog/q1.html
@@ -4,7 +4,9 @@
 		<title>Question 1</title>
 	</head>
 	<body>
-		<img src="que1.jpg"><br>
-		<img src="a1que1.jpg">
-	</body>
+		<br><br><br>
+		<img src="que1.jpg"><br><br><br>
+		<a href="q2.1.html"><img src="aaq1.jpg"></a><br><br><br><br>
+		<a href="q2.2.html"><img src="q1.6.jpg"></a>
+</body>
 </html>
