--- a/dog/beagle.html
+++ b/dog/beagle.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<img src="beagle.jpg"><br><br><br>
+<center><img src="theb.jpg"></center><br><br><br>
 <center><a href="index.html"><img src="bea.jpg"></center></a>
 </body>
 </html>
