--- a/dog/bullmastiff.html
+++ b/dog/bullmastiff.html
@@ -4,7 +4,7 @@
 	<title>Bullmastiff</title>
 </head>
 <body>
-<img src="bullmastiff.jpg"><br><br><br>
+<center><img src="thebm.jpg"><br><br><br></center>
 <center><a href="index.html"><img src="bm.jpg"></center></a>
 </body>
 </html>
