--- a/dog/chi.html
+++ b/dog/chi.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<img src="chi.jpg"><br><br><br>
+<center><img src="thechi.jpg"></center><br><br><br>
 <center><a href="index.html"><img src="chi2.jpg"></center></a>
 </body>
 </html>
