--- a/dog/doberman.html
+++ b/dog/doberman.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<img src="dob1.jpg"><br><br><br>
+<center><img src="thedob.jpg"><br><br><br></center>
 <center><a href="index.html"><img src="dob.jpg"></center></a>
 </body>
 </html>
