--- a/dog/greatdane.html
+++ b/dog/greatdane.html
@@ -4,7 +4,7 @@
 	<title>Great Dane</title>
 </head>
 <body>
-<img src="greatdane.jpg"><br><br><br>
+<center><img src="thegd.jpg"><br><br><br></center>
 <center><a href="index.html"><img src="gd.jpg"></center></a>
 </body>
 </html>
