--- a/dog/pom.html
+++ b/dog/pom.html
@@ -4,7 +4,7 @@
 	<title>Pomeranian</title>
 </head>
 <body>
-<img src="pom.jpg"><br><br><br>
+<center><img src="thepom.jpg"><br><br><br></center>
 <center><a href="index.html"><img src="pom2.jpg"></center></a>
 </body>
 </html>
