--- a/dog/pug.html
+++ b/dog/pug.html
@@ -4,7 +4,7 @@
 	<title>Pug</title>
 </head>
 <body>
-<img src="pug.jpg"><br><br><br>
+<center><img src="thepug.jpg"><br><br><br></center>
 <center><a href="index.html"><img src="pug2.jpg"></center></a>
 </body>
 </html>
