--- a/dog/q2.1.html
+++ b/dog/q2.1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<br><br><img src="realq2.jpg"><br><br>
-	<a href="q3.1.html"><img src="q2a1.jpg"><br><br><br></a>
-	<a href="q3.2.html"><img src="q2a2.jpg"></a>
+	<a href="q3.1.html"><img src="tall.jpg"><br><br><br></a>
+	<a href="q3.2.html"><img src="short.jpg"></a>
 </body>
 </html>
