--- a/dog/q2.2.html
+++ b/dog/q2.2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<br><br><img src="realq2.jpg"><br><br>
-	<a href="q3.3.html"><img src="q2a1.jpg"></a><br><br><br>
-	<a href="q3.4.html"><img src="q2a2.jpg"></a>
+	<a href="q3.3.html"><img src="tall.jpg"></a><br><br><br>
+	<a href="q3.4.html"><img src="short.jpg"></a>
 </body>
 </html>
