--- a/dog/husky.html
+++ b/dog/husky.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<img src="husky.jpg"><br><br><br>
+<center><img src="thesb.jpg"></center><br><br><br>
 <center><a href="index.html"><img src="sh.jpg"></center></a>
 </body>
 </html>
