--- a/Poster/index.html
+++ b/Poster/index.html
@@ -12,10 +12,11 @@
 	<div class="r"></div>
 	<div class="r2"></div>
 	<div class="h">Kwang <br>Young Chung: <br>Aggreations</div>
-	<div class="d">Nov. 16, 2018-<br> July 28, 2019</div>
+	<div class="d">Nov. 16, 2018–<br> July 28, 2019</div>
 	<div class="m">Brooklyn Museum</div>
 	<div class="a">200 Eastern Parkway Brooklyn,<br> New York 11238-6052</div>
-	<a href="http://www.chunkwangyoung.com/html/main.php" target="blank"><div class="w">www.chunkwangyoung.com</div></a>
-	<a href="https://www.brooklynmuseum.org/exhibitions/kwang_young_chun" target="blank"><div class="i">www.brooklynmuseum.org</div>
+	<a href="http://www.chunkwangyoung.com/html/main.php" target="blank"><div class="w">chunkwangyoung.com</div></a>
+	<a href="https://www.brooklynmuseum.org/exhibitions/kwang_young_chun" target="blank"><div class="i">brooklynmuseum.org</div>
+	<div class="f">Admissions<br>Starting from $10</div>	
 </body>
 </html>
