--- a/yeehaw/index.html
+++ b/yeehaw/index.html
@@ -4,6 +4,7 @@
 	<title>Yeehaw</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 </head>
 <body>
 	<div class="bg"></div>
@@ -16,5 +17,6 @@
 	<a href="about.html"><div class="h">Yeehaw!</div></a>
 	<div class="rule"></div>
 	<div class="r2"></div>
+	<div class="sh">Cowboys of Color.</div>
 </body>
 </html>
